--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.16.0)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCES main.cpp)
+set(SOURCES main.cpp lora.cpp hw/sx1287.cpp)
 
 idf_component_register(SRCS ${SOURCES}
         INCLUDE_DIRS
